# scir

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  buildspec.gpu.yml  docker-compose.gpu.yml  requirements.txt
.github/workflows/: ci.yml  docs-examples.yml  gpu.yml  publish.yml
ci/codebuild/: project.example.json
ci/docker/: Dockerfile.cuda
codex/: startup.sh
crates/scir/: Cargo.toml  README.md
crates/scir-core/: Cargo.toml  README.md
crates/scir-core/src/: lib.rs
crates/scir-fft/: Cargo.toml  README.md
crates/scir-fft/benches/: fft.rs
crates/scir-fft/src/: lib.rs  vision.rs
crates/scir-gpu/: Cargo.toml  README.md
crates/scir-gpu/src/: lib.rs  wgpu_backend.rs
crates/scir-gpu/src/kernels/: elementwise_add.wgsl  resize2d.wgsl
crates/scir-iir-filters/: Cargo.toml  README.md
crates/scir-iir-filters/src/: bessel_tables.rs  cplxreal.rs  errors.rs  filter.rs  filter_design.rs  lib.rs  sos.rs  test_util.rs  util.rs  zpk2tf.rs
crates/scir-iir-filters/src/macros/: assert_approx_eq.rs  cplx.rs  mod.rs  util.rs
crates/scir-linalg/: Cargo.toml  README.md
crates/scir-linalg/benches/: solve.rs
crates/scir-linalg/src/: lib.rs
crates/scir-nd/: Cargo.toml  README.md
crates/scir-nd/src/: lib.rs
crates/scir-optimize/: Cargo.toml  README.md
crates/scir-optimize/src/: lib.rs
crates/scir-signal/: Cargo.toml  README.md
crates/scir-signal-build/: Cargo.toml  README.md
crates/scir-signal-build/src/: lib.rs
crates/scir-signal/benches/: signal.rs
crates/scir-signal/src/: lib.rs  window.rs
crates/scir/examples/: elementwise_gpu.rs  fir_bench.rs  fir_gpu.rs
crates/scir/src/: lib.rs
docs/: codebuild-gpu.md  compose-gpu.md
en-US/: AGENTS.md  CONTRIBUTING.md  PLAN.md  README.md
en-US/crates/scir/: README.md
en-US/crates/scir-core/: README.md
en-US/crates/scir-fft/: README.md
en-US/crates/scir-gpu/: README.md
en-US/crates/scir-linalg/: README.md
en-US/crates/scir-nd/: README.md
en-US/crates/scir-optimize/: README.md
en-US/crates/scir-signal/: README.md
en-US/docs/: codebuild-gpu.md  compose-gpu.md  gpu-runner.md
es-MX/: AGENTS.md  CONTRIBUTING.md  PLAN.md  README.md
es-MX/crates/scir/: README.md
es-MX/crates/scir-core/: README.md
es-MX/crates/scir-fft/: README.md
es-MX/crates/scir-gpu/: README.md
es-MX/crates/scir-linalg/: README.md
es-MX/crates/scir-nd/: README.md
es-MX/crates/scir-optimize/: README.md
es-MX/crates/scir-signal/: README.md
es-MX/docs/: codebuild-gpu.md  compose-gpu.md  gpu-runner.md
fr-CA/: AGENTS.md  CONTRIBUTING.md  PLAN.md  README.md
fr-CA/crates/scir/: README.md
fr-CA/crates/scir-core/: README.md
fr-CA/crates/scir-fft/: README.md
fr-CA/crates/scir-gpu/: README.md
fr-CA/crates/scir-linalg/: README.md
fr-CA/crates/scir-nd/: README.md
fr-CA/crates/scir-optimize/: README.md
fr-CA/crates/scir-signal/: README.md
fr-CA/docs/: codebuild-gpu.md  compose-gpu.md  gpu-runner.md
scripts/: gen_bessel_tables.py  gen_fixtures.py  gen_linalg_fixtures.py  gen_optimize_fixtures.py  gen_signal_fixtures.py  pre-commit.sh  publish_changed.sh  setup-ci-env.sh
tests/: test_scripts_compile.py
