[package]
name = "scir-fft"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "SciR FFT: parity-first FFT/RFFT/IRFFT with fixture-based testing and rustfft/realfft backends."
repository = "https://github.com/SoftOboros/scir"
homepage = "https://github.com/SoftOboros/scir"
documentation = "https://docs.rs/scir-fft"
readme = "README.md"
keywords = ["scir","scipy","fft","rustfft","numeric"]
categories = ["science","mathematics"]

[dependencies]
ndarray = "0.15"
num-complex = "0.4"
rustfft = "6"
realfft = "3"

[dev-dependencies]
ndarray-npy = "0.8"
scir-core = { path = "../scir-core" }
criterion = "0.5"
