[package]
name = "scir-iir-filters"
version = "0.1.4"
authors = [
    "https://github.com/annoybot",
    "Softoboros Technology Inc.",
]
description = "SciR fork of iir_filters: Apache-2.0 IIR filter design (Butterworth, ZPK, SOS) with public Sos accessors so downstream realtime DSP runtimes can read designed coefficients. Tracks upstream iir_filters@0.1.3."
license = "Apache-2.0"
repository = "https://github.com/SoftOboros/scir"
edition = "2021"
readme = "README.md"
keywords = ["biquad", "filter", "iir", "scipy"]

[lib]
name = "scir_iir_filters"
path = "src/lib.rs"

[dependencies]
num-complex = "^0.4.2"
num-traits = "^0.2.15"
thiserror = "^1.0.32"

[dev-dependencies]
rstest = "^0.13.0"
stdext = "^0.3.1"
