[package]
name = "scir-iir-filters"
version = "0.1.6"
authors = [
    "https://github.com/annoybot",
    "Softoboros Technology Inc.",
]
description = "SciR fork of iir_filters: Apache-2.0 IIR filter design (Butterworth, Chebyshev I, Bessel; ZPK, SOS) with public Sos accessors so downstream realtime DSP runtimes can read designed coefficients. Builds for `no_std + alloc` (libm-backed math); std mode is default and additionally implements `std::error::Error`. Tracks upstream iir_filters@0.1.3 with SciR-side additions."
license = "Apache-2.0"
repository = "https://github.com/SoftOboros/scir"
edition = "2021"
readme = "README.md"
keywords = ["biquad", "filter", "iir", "scipy"]
categories = ["science", "mathematics", "no-std"]

[lib]
name = "scir_iir_filters"
path = "src/lib.rs"

[features]
# Default mode adds `impl std::error::Error for Error` and pulls thiserror
# for the upstream-style derive. Disable to build for `no_std + alloc`
# targets (embedded DSP, build scripts targeting MCU, etc.).
default = ["std"]
std = ["thiserror", "num-traits/std", "num-complex/std"]

[dependencies]
# `default-features = false` + `libm` makes the Float trait methods
# (sinh/cosh/asinh/sqrt/powf/tan/abs/...) available in both std and no_std
# modes without conditional compilation on call sites.
num-complex = { version = "^0.4.2", default-features = false, features = ["libm"] }
num-traits = { version = "^0.2.15", default-features = false, features = ["libm"] }
# Optional in no_std mode (replaced by a hand-written `Display` impl).
thiserror = { version = "^1.0.32", optional = true }

[dev-dependencies]
rstest = "^0.13.0"
stdext = "^0.3.1"
