[package]
name = "scir-optimize"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "SciR Optimize: Nelder–Mead, BFGS, and L-BFGS with fixture-driven validation on Rosenbrock/Himmelblau."
repository = "https://github.com/SoftOboros/scir"
homepage = "https://github.com/SoftOboros/scir"
documentation = "https://docs.rs/scir-optimize"
readme = "README.md"
keywords = ["scir","scipy","optimize","bfgs","nelder-mead"]
categories = ["science","mathematics"]

[dependencies]
ndarray = "0.15"
scir-core = { path = "../scir-core" }

[dev-dependencies]
ndarray-npy = "0.8"
