[package]
name = "scir-signal"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "SciR Signal: Butterworth/Chebyshev/Bessel design, sosfilt/filtfilt, and resample_poly with fixture-driven parity to SciPy. Optional GPU-forwarded FIR."
repository = "https://github.com/SoftOboros/scir"
homepage = "https://github.com/SoftOboros/scir"
documentation = "https://docs.rs/scir-signal"
readme = "README.md"
keywords = ["scir","scipy","signal","filter","filtfilt"]
categories = ["science","mathematics"]

[dependencies]
ndarray = "0.15"
iir_filters = "0.1.3"
scir-core = { path = "../scir-core" }
scir-gpu = { path = "../scir-gpu", optional = true }

[features]
gpu = ["scir-gpu"]

[dev-dependencies]
ndarray-npy = "0.8"
criterion = "0.5"
