[package]
name = "scir"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "SciR: SciPy rebuilt for Rust — safe, fast, GPU‑ready. Parity-first APIs for FFT, signal, optimize, and more."
repository = "https://github.com/SoftOboros/scir"
homepage = "https://github.com/SoftOboros/scir"
documentation = "https://docs.rs/scir"
readme = "README.md"
keywords = ["scir","scipy","rust","gpu","ndarray"]
categories = ["science","mathematics"]

[features]
default = []
# Aggregated GPU feature enabling CUDA in scir-gpu and GPU APIs in scir-signal
gpu = ["scir-gpu/cuda", "scir-signal/gpu"]
# Alias for enabling all GPU features across crates; currently same as `gpu`.
gpu-all = ["gpu"]

[dependencies]
scir-core = { path = "../scir-core" }
scir-nd = { path = "../scir-nd" }
scir-fft = { path = "../scir-fft" }
scir-signal = { path = "../scir-signal", default-features = false, features = [] }
scir-gpu = { path = "../scir-gpu", default-features = false, features = [] }
ndarray = "0.15"

[lib]
path = "src/lib.rs"

[dev-dependencies]
scir-gpu = { path = "../scir-gpu" }
rand = "0.8"
