[package]
name = "scir"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "SciR: SciPy rebuilt for Rust — safe, fast, GPU‑ready. Parity-first APIs for FFT, signal, optimize, and more."
repository = "https://github.com/SoftOboros/scir"
homepage = "https://github.com/SoftOboros/scir"
documentation = "https://docs.rs/scir"
readme = "README.md"
keywords = ["scir","scipy","rust","gpu","ndarray"]
categories = ["science","mathematics"]
publish = false

[features]
default = []
# Aggregated GPU feature enabling CUDA in scir-gpu and GPU APIs in scir-signal
gpu = ["scir-gpu/cuda", "scir-signal/gpu"]
# Alias for enabling all GPU features across crates; currently same as `gpu`.
gpu-all = ["gpu"]

[dependencies]
scir-core = { version = "0.3.0", path = "../scir-core" }
scir-nd = { version = "0.3.0", path = "../scir-nd" }
scir-fft = { version = "0.3.0", path = "../scir-fft" }
scir-signal = { version = "0.3.0", path = "../scir-signal", default-features = false, features = [] }
scir-gpu = { version = "0.3.0", path = "../scir-gpu", default-features = false, features = [] }
ndarray = "0.15"

[lib]
path = "src/lib.rs"

[dev-dependencies]
scir-gpu = { version = "0.3.0", path = "../scir-gpu" }
rand = "0.8"
